# ChemeleonSMD

./: .gitignore  README.md  distill_score_dmpnn.py  distill_v2.py  distill_v3.py  finetuning_allinone_v6_cv5.py  finetuning_demo.py  pretrain_score.py  pyproject.toml  requirements.txt
chemeleon_smd/: __init__.py  _graph_ops.py  all_in_one.py  all_in_one_batches.py  chemeleon_score.py  convert_weights.py  graph_cache.py  inference.py  layers.py  mol_featurizer.py  mpnn.py  score_dmpnn.py
chemeleon_smd/weights/: chemeleon_mpnn.npz  chemeleon_mpnn_config.json  score_dmpnn_distilled_v3.npz  score_dmpnn_distilled_v4.npz  score_dmpnn_distilled_v5.npz  score_dmpnn_distilled_v6.npz
tests/: test_all_in_one.py
